Update chest-back config for Bigmen

--- a/users/Bigmen/pre made/HILV/arnold/chest-back_config.json
+++ b/users/Bigmen/pre made/HILV/arnold/chest-back_config.json
@@ -16,7 +16,7 @@
     },
     {
       "id": "ex3",
-      "name": "صدر مستوى على السميث",
+      "name": "صدر مستوى",
       "image": "../../../exercises images/flat smith machine.PNG",
       "isSingleSide": false,
       "numSets": 1
